--- a/app/styles/components/_profile-main.scss
+++ b/app/styles/components/_profile-main.scss
@@ -1,3 +1,11 @@
 .profile-main__container {
-  background-color: bisque;
+  margin-left: 14px;
+  padding: 18px 10px;
+  padding-bottom: 0;
+  background-color: #f5f5f5;
+}
+
+.profile-main__index-container {
+  align-items: center;
+  justify-content: center;
 }
