--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -12,7 +12,9 @@
     </ul>
   </aside>
 
-  <main class="profile-main__container flex">
+  <main class="profile-main__container">
     {{outlet}}
   </main>
 </div>
+
+
