Add basic UI for detail page
- Add 'type' params in the route
- Add basic UI for detail page
- Grab data from model

--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -4,11 +4,14 @@
     <ul class='profile-aside__list-container'>
       {{#each model as |types|}}
       <div>Type: {{types.type}}</div>
-      {{#each types.data as |profile|}}
-      <li>
-        {{#link-to 'profile.detail' profile}} {{profile.name}} {{profile.description}} {{/link-to}}
-      </li>
-      {{/each}} {{/each}}
+        {{#each types.data as |profile|}}
+        <li>
+          {{#link-to 'profile.detail' types.type profile.name}}
+            {{profile.name}}
+          {{/link-to}}
+        </li>
+        {{/each}}
+      {{/each}}
     </ul>
   </aside>
 
