--- a/app/styles/_util.scss
+++ b/app/styles/_util.scss
@@ -1,5 +1,5 @@
 .container {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 ol,
@@ -9,6 +9,7 @@ ul {
 
 a {
   text-decoration: none;
+  color: black;
 
   &:visited {
     color: black;
