--- a/app/templates/profile/detail.hbs
+++ b/app/templates/profile/detail.hbs
@@ -1,7 +1,7 @@
 {{#paper-card as |card|}}
   {{#card.content class="profile-main__card-container"}}
     <div class="profile-main__header-container">
-      <img src={{model.profileImage.src}} alt={{model.profileImage.alt}}>
+      <img src={{model.profile.image.src}} alt={{model.profile.image.alt}}>
       <p>{{model.name}}</p>
       <p>{{model.description}}</p>
     </div>
