Implement the cache service to address concerns in last commit

--- a/app/templates/profile/detail.hbs
+++ b/app/templates/profile/detail.hbs
@@ -14,7 +14,7 @@
     {{paper-divider}}
     <div class="profile-main__content-container layout-column">
       {{#each model.data as |tableData|}}
-        {{data-table data=tableData key=name}}
+        {{data-table data=tableData name=name}}
       {{/each}}
     </div>
   {{/card.content}}
