Modify data table component
Modify table that only display 2 lines of contents into profile
header.

--- a/app/styles/components/_profile-main.scss
+++ b/app/styles/components/_profile-main.scss
@@ -11,7 +11,11 @@
   justify-content: center;
 }
 
+.profile-main__profile-image-container {
+  margin-right: 16px;
+}
+
 .profile-main__profile-image {
   width: 100%;
-  max-width: 260px;
+  max-width: 244px;
 }
