--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -15,7 +15,7 @@
     </ul>
   </aside>
 
-  <main class="profile-main__container">
+  <main class="profile-main__container flex">
     {{outlet}}
   </main>
 </div>
