--- a/app/templates/profile/detail.hbs
+++ b/app/templates/profile/detail.hbs
@@ -1,16 +1,24 @@
 {{#paper-card as |card|}}
   {{#card.content class="profile-main__card-container"}}
-    <div class="profile-main__header-container layout-row">
+    <div class="profile-main__header-info-container layout-row">
       <div class="profile-main__profile-image-container flex-30">
         <img class="profile-main__profile-image" src={{model.profile.image.src}} alt={{model.profile.image.alt}}>
       </div>
-      <div class="profile-main_profile-description-container flex">
+      <div class="profile-main__profile-description-container flex">
         <h2>{{model.name}}</h2>
         {{#each-in model.profile.info as |name desc|}}
           <p>{{name}}: {{desc}}</p>
         {{/each-in}}
       </div>
     </div>
+
+    {{#if model.profile.infoTable}}
+      <div class="profile-main__header-table-container layout-row">
+        <div class="flex">
+          {{data-table formattedData=model.profile.infoTable}}
+        </div>
+      </div>
+    {{/if}}
   {{/card.content}}
 {{/paper-card}}
 
