fix minor style issues

--- a/app/styles/components/_profile-aside.scss
+++ b/app/styles/components/_profile-aside.scss
@@ -5,7 +5,8 @@
   background-color: #616161;
 }
 
-.profile-aside__paper-expansion-panel.md-open {
+.profile-aside__paper-expansion-panel.md-open,
+.profile-aside__paper-expansion-panel.md-close, {
   border-radius: 0;
 }
 
