Add route for mobile browser

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,4 +8,5 @@
 // import components
 @import './components/profile-aside';
 @import './components/profile-main';
+@import './components/mobile-not-support';
 
