--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -4,7 +4,7 @@
     name="left"
     open=leftSideBarOpen
     onToggle=(action (mut leftSideBarOpen))}}
-    {{#paper-toolbar as |toolbar|}}
+    {{#paper-toolbar}}
       {{#paper-toolbar-tools}}部落冲突{{/paper-toolbar-tools}}
     {{/paper-toolbar}}
     {{#paper-content}}
