Fix style / url issue for deploy
1. In mobile, sidenav should appear on screen even when user scroll to the bottom of the main content
2. Use hash in url, so github page can serve nested route properly(when user refresh on nested route, it was 404)
3. Add z-index, to make sure toggle container always on top

--- a/app/styles/components/_profile-aside.scss
+++ b/app/styles/components/_profile-aside.scss
@@ -1,3 +1,9 @@
+@media (max-width: 960px) {
+  .profile-aside__container {
+    position: fixed;
+  }
+}
+
 .profile-aside__container {
   background-color: #616161;
 }
